--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,7 @@
   crossorigin="anonymous"
 />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/flatly/bootstrap.min.css"/>
-  <title>React Reading List</title>
+  <title>My Books List</title>
 </head>
 
 <body>
